fix div overflow

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -3,5 +3,6 @@
 }
 
 .portfolio-content p {
-  margin-top: 0;
+  margin: 0;
+  font-size: 18px;
 }
